# hermit-bench

./: .gitignore  Cargo.toml  README.md  action.yml  data.js  index.html  results.json  test_input.json
.github/test/: Cargo.toml  input.yml
.github/test/src/: test1.rs  test2.rs
.github/validate/: Cargo.toml
.github/validate/src/: main.rs
.github/workflows/: ci.yml
src/: main.rs
