[package]
name = "hermit-bench"
authors = ["Carl Wachter <carl.wachter@rwth-aachen.de>"]
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
inventory = "0.3"
serde_json = "1.0"
serde_yaml = "0.9"
regex = "1.10.5"
wait-timeout = "0.2"